- Get rid of horizontal separator when dragging uploaded files to folders for external experiments. Expand tree node of folder after upload file drop operation.
- Fix bug so that external price charged when price dragged onto experiment billing for lab marked as 'External pricing'.
- Get rid of suffix " - sequencing reads" on Illumina download folders.

5.0.2.1 (Oct 28, 2010)
---------------------
- Fix bug that was causing Sample prep method to revert back to default on Illumina requests

5.0.2 (Oct 27, 2010)
--------------------
- Allow user to enter alternate text to describe nucleic acid extraction method when dropdown options don't describe method.
- Fix bug that was causing subsequent text searches (on Nav bar) to not be performed.


5.0.1 (Oct 26, 2010)
---------------------
- Categorize sequence tag schemes (oligo barcode scheme) by Illumina platform (request category)
- Add sortOrder to sequence tags (oligo barcode)

5.0.0 (Oct 25, 2010)
----------------------
- Allow external experiments to be submitted to GNomEx.  
- Provide window to upload and organize files for external experiments.
- Introduced property which determines if default submission is internal or external experiment submision.
- Reworked home page.
- Performance improvements to toXMLDocument in commands called during initialization (Robb).
- Prevent null pointer exception on GetRequest when billing item has null total price.
- Fix bug that was causing Prep instructions column to show up on printable form even though they are blank


4.9.9.1 
----------------------
- Added total dollar amount to billing account.
- User is prevented from submitting experiment request if total charges on billing account (including estimated charges for new request) exceed billing account's total dollar amount.

4.9.9 (Oct 10, 2010)
-----------------------
- Show estimated charges on Submit Request confirm tab.

4.9.8.1 (Oct 6, 2010)
-----------------------